<resources>
    <string name="app_name">SocialTech</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="form">Form</string>
    <string name="training">Training</string>
    <string name="btnAddContact">Add Contact</string>
    <string name="numberContacts">Numero Total Contactos: 0</string>
    <string name="province">Province</string>
    <string name="age">Age</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="title">Choose a title..</string>
    <string name="addNewContact">Add New Contact</string>
</resources>