<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/fragmentForm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ej: Jesús"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ej: Rodríguez Jurado"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone" />

            <EditText
                android:id="@+id/editTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Ej: 111111111"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="example@gmail.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="@string/title"
                android:completionThreshold="1"/>
            <!--<Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></Spinner>-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province" />

            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekAge"
                    android:layout_width="308dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/genderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderMale" />


                <RadioButton
                    android:id="@+id/genderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderFemale" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addContact"
                    android:text="@string/btnAddContact" />

                <TextView
                    android:id="@+id/numberContacs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberContacts" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
